<resources>
    <string name="app_name">Banfox</string>

    <string name="scr_MainActivity_start_btn">Iniciar</string>
    <string name="scr_MainActivity_logoView_description">Logo da empresa.</string>
    <string name="scr_MainActivity_iconView_description">Ícone de leitura facial.</string>



    <string name="scr_Reader_scan_btn">Escanear</string>
    <string name="scr_Reader_text">Leia o QR Code para que possamos identificá-lo.</string>
    <string name="scr_Reader_iconView_description">Ícone de scan de QR Code.</string>



    <string name="scr_ExplanationActivity_text">Este aplicativo tem como objetivo validar se o usuário que o esta utilizando é quem realmente diz ser.\nEsse processo é necessário para garantir a segurança da sua empresa e para evitar fraudes para com a Banfox.\nNos desculpamos pelo incômodo e esperamos entregar a melhor experiencia de aquisição de crédito possível.\n\nAtenciosamente, Equipe Banfox.</string>
    <string name="scr_ExplanationActivity_nextScr_btn">Continuar</string>



    <string name="scr_PictureGuide_takePicture_btn">Tirar foto</string>

    <string name="scr_PictureGuide1_textTop">Tire uma foto do seu rosto.</string>
    <string name="scr_PictureGuide1_textBottom">Tenha certeza que de seu rosto está bem enquadrado e focado, além de que não existam outras pessoas na foto.</string>
    <string name="scr_PictureGuide1_iconView_description">Ícone de tirar foto do usuário.</string>

    <string name="scr_PictureGuide2_textTop">Tire uma foto do seu documento: CNH ou RG.</string>
    <string name="scr_PictureGuide2_textBottom">Tenha certeza de que o documento contém uma foto sua e está bem enquadrado e focado.</string>
    <string name="scr_PictureGuide2_iconView_description">Ícone de tirar foto do documento.</string>

    <string name="scr_PictureGuide3_textTop">Tire uma foto do seu documento: CNH ou RG.</string>
    <string name="scr_PictureGuide3_textBottom">Tenha certeza de que o documento contém seu RG ou CPF e está bem enquadrado e focado.</string>
    <string name="scr_PictureGuide3_iconView_description">Ícone de tirar foto do documento.</string>

    <string name="scr_PictureGuide4_textTop">Tire uma foto sua segurando o documento  </string>
    <string name="scr_PictureGuide4_textBottom">Certifique-se que tanto o documento quanto seu rosto estejam bem focados </string>
    <string name="scr_PictureGuide4_iconView1_description">Ícone de tirar foto do documento.</string>
    <string name="scr_PictureGuide4_iconView2_description">Ícone de tirar foto do usuário.</string>
    <string name="scr_LoadingInformations_logo">Logo banfox</string>



    <string name="scr_received_info_success1">Pronto!</string>
    <string name="scr_received_info_success2">Suas informações foram enviadas e estão sendo processadas. Volte ao site para continuar seu cadastro.</string>
    <string name="scr_received_info_success3">Obrigado!</string>
    <string name="scr_received_info_error1">Ops...</string>
    <string name="scr_received_info_error2">Parece que ocorreu um erro ao enviar as informações, por favor tentar novamente.</string>
    <string name="scr_received_info_error3"></string>
    <string name="scr_received_info_home_btn_text">Voltar ao início</string>







    <string name="enviando_dados">Estamos analisando suas imagens, aguarde um estante…</string>
    <string name="picture1">Procurando por faces a serem analisadas…</string>
    <string name="picture2">Analisando os matches…</string>
    <string name="picture3">Checando seu nome…</string>
    <string name="aguarde">Aguarde um instante...</string>
    <string name="dados_encaminhamento">Dados sendo encaminhados...</string>

    <string name="captura_foto">Capture</string>
</resources>
