<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".FunctionalityInformation"
    android:background="@color/background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"

        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/colorVeryDarkGreyBanfox"
            android:text="@string/scr_PictureGuide4_textTop"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"

        android:orientation="horizontal"
        android:weightSum="100"
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"

            app:srcCompat="@drawable/ic_identity_card"
            android:contentDescription="@string/scr_PictureGuide4_iconView1_description"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"

            app:srcCompat="@drawable/ic_selfie_2"
            android:contentDescription="@string/scr_PictureGuide4_iconView2_description"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"

        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/colorVeryDarkGreyBanfox"
            android:text="@string/scr_PictureGuide4_textBottom"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"

        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/nextScr_btn"
            android:background="@drawable/ds_button"

            android:text="@string/scr_PictureGuide_takePicture_btn"
            android:textSize="20sp"
            android:textColor="@color/colorVeryLightGreyBanfox"
            android:fontFamily="@font/raleway_medium"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="20sp"
            />
    </LinearLayout>
</LinearLayout>




