<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoadingInformations">

   <ImageView
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="200dp"
       android:src="@drawable/banfox"/>

   <ProgressBar
       android:id="@+id/progressbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true"
       android:layout_margin="10dp"
       android:progressTint="@color/colorOrangeBanfox"
       style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

   <TextView
       android:id="@+id/LoadingSendingTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/enviando_dados"
       android:layout_below="@+id/progressbar"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="16dp"
       android:textSize="24sp"
       android:textColor="#162d3f"
       android:visibility="invisible"/>

   <TextView
       android:id="@+id/LoadingMiddleTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/aguarde"
       android:layout_below="@+id/progressbar"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="16dp"
       android:textSize="24sp"
       android:textColor="#162d3f"
       android:visibility="invisible"/>

   <TextView
       android:id="@+id/LoadingFinalTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/dados_encaminhamento"
       android:layout_below="@+id/progressbar"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="16dp"
       android:textSize="24sp"
       android:textColor="#162d3f"
       android:visibility="invisible"/>
</RelativeLayout>