<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MainActivity"
    android:background="@color/background"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"

        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_group_2"
            android:contentDescription="@string/scr_MainActivity_logoView_description"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"

        android:orientation="vertical"
        android:weightSum="100"
        >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:srcCompat="@drawable/ic_facial_recognition_2"
            android:contentDescription="@string/scr_MainActivity_iconView_description"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"

        android:gravity="center"
        >

        <Button
            android:id="@+id/home_btn"
            android:background="@drawable/ds_button"

            android:text="@string/scr_MainActivity_start_btn"
            android:textSize="20sp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="@color/colorVeryLightGreyBanfox"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="20sp"
            />
    </LinearLayout>

</LinearLayout>
